# traffic-dataset-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: classes.yaml
src/traffic_dataset/: __init__.py  autolabel.py  classes.py  cli.py  convert.py  extract.py  rename.py  subsample.py  validate.py
tests/: test_autolabel.py  test_classes.py  test_extract.py  test_subsample.py
